chore(frontpage): fixing links

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <body>
         <div id="main" style="width:850px; margin:0 auto; padding-top:150px; display:none;">
             <img name="logos" src="images/logos.png" width="850" height="400" id="logos" usemap="#m_logos" alt="" /><map name="m_logos" id="m_logos">
-            <area shape="rect" coords="644,221,843,355" href="http://content.alpha.ch/category/service/ueber-uns/" alt="" />
-            <area shape="rect" coords="432,221,631,355" href="http://www.topjobs.ch/de/about" alt="" />
-            <area shape="rect" coords="219,221,418,355" href="http://holding.jobs.ch/" alt="" />
-            <area shape="rect" coords="432,44,631,178" href="http://www.jobup.ch/fr/wer-sind-wir" alt="" />
-            <area shape="rect" coords="219,44,418,178" href="http://www.jobs.ch/about" alt="" />
+            <area shape="rect" coords="644,221,843,355" href="https://alpha.ch/de/%C3%BCber-uns/" alt="" />
+            <area shape="rect" coords="432,221,631,355" href="https://topjobs.ch/de/%C3%BCber-uns/t" alt="" />
+            <area shape="rect" coords="219,221,418,355" href="https://www.jobcloud.ch" alt="" />
+            <area shape="rect" coords="432,44,631,178" href="https://www.jobup.ch/fr/wer-sind-wir" alt="" />
+            <area shape="rect" coords="219,44,418,178" href="https://www.jobcloud.ch/c/de-ch/about/" alt="" />
             </map>
         </div>
         <script>
