boost company profile and domains

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <img name="logos" src="images/logos.png" width="850" height="400" id="logos" usemap="#m_logos" alt="" /><map name="m_logos" id="m_logos">
             <area shape="rect" coords="644,221,843,355" href="https://alpha.ch/de/%C3%BCber-uns/" alt="about alpha.ch" />
             <area shape="rect" coords="432,221,631,355" href="http://www.topjobs.ch/de/about" alt="about topjobs" />
-            <area shape="rect" coords="219,221,418,355" href="https://www.jobcloud.ch/c/en/about/" alt="about jobcloud" />
-            <area shape="rect" coords="432,44,631,178" href="https://www.jobcloud.ch/c/fr-ch/about/" alt="about jobup.ch" />
-            <area shape="rect" coords="219,44,418,178" href="https://www.jobcloud.ch/c/de-ch/about/" alt="about jobs.ch" />
+            <area shape="rect" coords="219,221,418,355" href="https://www.jobs.ch/de/firmen/867-jobcloud-ag/" alt="about jobcloud" />
+            <area shape="rect" coords="432,44,631,178" href="https://www.jobup.ch/fr/" alt="about jobup.ch" />
+            <area shape="rect" coords="219,44,418,178" href="https://www.jobs.ch/de/" alt="about jobs.ch" />
             </map>
         </div>
         <script>
